WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193411
Bulgarian TLD should not punycode-encode URLs with Bulgarian Cyrillic characters
https://bugs.webkit.org/show_bug.cgi?id=193411
Summary
Bulgarian TLD should not punycode-encode URLs with Bulgarian Cyrillic characters
Alex Christensen
Reported
2019-01-14 15:05:34 PST
Bulgarian TLD should not punycode-encode URLs with Bulgarian Cyrillic characters
Attachments
Patch
(4.15 KB, patch)
2019-01-14 15:10 PST
,
Alex Christensen
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-01-14 15:10:53 PST
Created
attachment 359083
[details]
Patch
Alexey Proskuryakov
Comment 2
2019-01-14 16:50:43 PST
Comment on
attachment 359083
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=359083&action=review
> Source/WTF/wtf/cocoa/NSURLExtras.mm:550 > + return (ch >= 0x0430 && ch <= 0x044A) || ch == 0x044C || (ch >= 0x044E && ch <= 0x0450) || ch == 0x045D || isASCIIDigit(ch) || ch == '-';
Surprised by U+0450 and 0x045D, but if ICANN says so...
Alex Christensen
Comment 3
2019-01-14 18:14:31 PST
http://trac.webkit.org/r239967
Radar WebKit Bug Importer
Comment 4
2019-01-14 18:15:28 PST
<
rdar://problem/47273102
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug